--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           bun-version: 1.1.0
       - name: Run Node.js script
+        working-directory: ./scripts
         run: |
           bun install  
           bun fetch.ts
