--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.6.0",
     "query-string": "^9.0.0"
   }
