--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.6.0",
-    "query-string": "^9.0.0"
+    "puppeteer-core": "^23.4.1",
+    "query-string": "^9.0.0",
+    "schema-dts": "^1.1.2"
   }
 }
