--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.6.0",
-    "puppeteer-core": "^23.4.1",
-    "query-string": "^9.0.0",
-    "schema-dts": "^1.1.2"
+    "query-string": "^9.0.0"
   }
 }
